--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,13 +14,48 @@
 
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <script
+      src="https://kit.fontawesome.com/0f88116e95.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
+    <script src="/js/app.js" defer></script>
+
     <title>SG Portfolio</title>
   </head>
 
   <body>
     <!-- Header -->
-    <header></header>
-
+    <header class="header">
+      <nav class="navbar__container">
+        <a href="#" class="logo">
+          <img src="/assets/img/GS-logo.svg" alt="Logo" />
+          <div class="logo-underline"></div>
+        </a>
+        <div class="navigation-container">
+          <ul class="navbar__list">
+            <li class="navbar__list-item">
+              <a class="navbar__list-link" href="#">home</a>
+            </li>
+            <li class="navbar__list-item">
+              <a class="navbar__list-link" href="#">portfolio</a>
+            </li>
+            <li class="navbar__list-item">
+              <a class="navbar__list-link" href="#">about</a>
+            </li>
+            <li class="navbar__list-item">
+              <a class="navbar__list-link" href="#">contact</a>
+            </li>
+          </ul>
+        </div>
+        <button type="button" class="hamburger-menu" id="menu-toggler">
+          <i class="fa-solid fa-bars"></i>
+        </button>
+      </nav>
+    </header>
+    <div class="demo"></div>
     <!-- Portfolio -->
 
     <!-- About -->
