Start of the main section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </head>
 
   <body>
-    <!-- Header -->
+    <!-- Navigation -->
     <header class="header">
       <nav class="navbar__container">
         <a href="#" class="logo">
@@ -50,13 +50,27 @@
             </li>
           </ul>
         </div>
-        <button type="button" class="hamburger-menu" id="menu-toggler">
-          <i class="fa-solid fa-bars"></i>
-        </button>
+        <div class="hamburger-menu" id="menu-toggler">
+          <div class="bar-top"></div>
+          <div class="bar-mid"></div>
+          <div class="bar-bottom"></div>
+        </div>
       </nav>
     </header>
-    <div class="demo"></div>
+
+    <!-- Main -->
+    <div class="main-container">
+      <div class="image-container"></div>
+      <div class="name-container">
+        <h1 class="name">GABOR SZABO</h1>
+      </div>
+      <div class="forward-icon-container">
+        <i class="fa-solid fa-sort-down"></i>
+      </div>
+    </div>
+
     <!-- Portfolio -->
+    <div class="demo"></div>
 
     <!-- About -->
 
