Animated forward icon added

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1 class="name">GABOR SZABO</h1>
       </div>
       <div class="forward-icon-container">
-        <i class="fa-solid fa-sort-down"></i>
+        <a href="#"><i class="fa-solid fa-sort-down"></i>
       </div>
     </div>
 
