Titles added and About section started

--- a/index.html
+++ b/index.html
@@ -1,81 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
-    <script
-      src="https://kit.fontawesome.com/0f88116e95.js"
-      crossorigin="anonymous"
-    ></script>
+  <link rel="stylesheet" href="assets/css/style.css" />
 
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+  <script src="https://kit.fontawesome.com/0f88116e95.js" crossorigin="anonymous"></script>
 
-    <script src="/js/app.js" defer></script>
+  <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
-    <title>SG Portfolio</title>
-  </head>
+  <script src="/js/app.js" defer></script>
 
-  <body>
-    <!-- Navigation -->
-    <header class="header">
-      <nav class="navbar__container">
-        <a href="#" class="logo">
-          <img src="/assets/img/GS-logo.svg" alt="Logo" />
-          <div class="logo-underline"></div>
-        </a>
-        <div class="navigation-container">
-          <ul class="navbar__list">
-            <li class="navbar__list-item">
-              <a class="navbar__list-link" href="#">home</a>
-            </li>
-            <li class="navbar__list-item">
-              <a class="navbar__list-link" href="#">portfolio</a>
-            </li>
-            <li class="navbar__list-item">
-              <a class="navbar__list-link" href="#">about</a>
-            </li>
-            <li class="navbar__list-item">
-              <a class="navbar__list-link" href="#">contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="hamburger-menu" id="menu-toggler">
-          <div class="bar-top"></div>
-          <div class="bar-mid"></div>
-          <div class="bar-bottom"></div>
-        </div>
-      </nav>
-    </header>
+  <title>SG Portfolio</title>
+</head>
 
-    <!-- Main -->
-    <div class="main-container">
-      <div class="image-container"></div>
-      <div class="name-container">
-        <h1 class="name">GABOR SZABO</h1>
+<body>
+  <!-- Navigation -->
+  <header class="header">
+    <nav class="navbar__container">
+      <a href="#home" class="logo">
+        <img src="/assets/img/GS-logo.svg" alt="Logo" />
+        <div class="logo-underline"></div>
+      </a>
+      <div class="navigation-container">
+        <ul class="navbar__list">
+          <li class="navbar__list-item">
+            <a class="navbar__list-link" href="#">home</a>
+          </li>
+          <li class="navbar__list-item">
+            <a class="navbar__list-link" href="#">portfolio</a>
+          </li>
+          <li class="navbar__list-item">
+            <a class="navbar__list-link" href="#">about</a>
+          </li>
+          <li class="navbar__list-item">
+            <a class="navbar__list-link" href="#">contact</a>
+          </li>
+        </ul>
       </div>
-      <div class="forward-icon-container">
-        <a href="#"><i class="fa-solid fa-sort-down"></i>
+      <div class="hamburger-menu" id="menu-toggler">
+        <div class="bar-top"></div>
+        <div class="bar-mid"></div>
+        <div class="bar-bottom"></div>
       </div>
+    </nav>
+  </header>
+
+  <!-- Main -->
+  <div class="main-container">
+    <div class="image-container"></div>
+    <div class="name-container">
+      <h1 class="name">GABOR SZABO</h1>
+    </div>
+    <div class="forward-icon-container">
+      <a href="#portfolio"><i class="fa-solid fa-sort-down"></i></a>
     </div>
 
-    <!-- Portfolio -->
-    <div class="demo"></div>
+  </div>
 
-    <!-- About -->
+  <!-- Portfolio -->
+  <div class="title-container">
+    <p class="title-back">Portfolio</p>
+    <h2 class="title-front">Portfolio</h2>
+  </div>
 
-    <!-- Contact -->
+  <div class="personal-container">
+    <div class="profile-image">
+      <p class="image-name">Gabor</p>
+      <p class="image-name">Szabo</p>
+    </div>
+    <p class="itroduction-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin. Lorem
+      ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+      aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
 
-    <!-- Footer -->
-  </body>
+  </div>
+
+
+  <!-- About -->
+  <div class="title-container">
+    <h2 class="title-back">About</h2>
+    <h2 class="title-front">About</h2>
+  </div>
+
+  <!-- Contact -->
+  <div class="title-container">
+    <h2 class="title-back">Contact</h2>
+    <h2 class="title-front">Contact</h2>
+  </div>
+
+  <!-- Footer -->
+  <div class="demo"></div>
+</body>
+
 </html>
