--- a/index.html
+++ b/index.html
@@ -73,23 +73,116 @@
     <h2 class="title-front">Portfolio</h2>
   </div>
 
-  <div class="personal-container">
-    <div class="profile-image">
-      <p class="image-name">Gabor</p>
-      <p class="image-name">Szabo</p>
-    </div>
-    <p class="itroduction-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-      incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin. Lorem
-      ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-      aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
-
-  </div>
 
 
   <!-- About -->
   <div class="title-container">
     <h2 class="title-back">About</h2>
     <h2 class="title-front">About</h2>
+  </div>
+
+  <div class="personal-container">
+    <div class="profile-image">
+      <p class="image-name">Gabor</p>
+      <p class="image-name">Szabo</p>
+    </div>
+    <p class="introduction-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+      incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin. Lorem
+      ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+      aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
+  </div>
+
+  <div class="skills-container">
+
+    <div class="skill-container">
+      <p class="skill-name">HTML</p>
+      <i class="skill-icon fa-brands fa-html5"></i>
+      <div class="xp-level html-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+    <div class="skill-container">
+      <p class="skill-name">CSS</p>
+      <i class="skill-icon fa-brands fa-css3-alt"></i>
+      <div class="xp-level css-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+    <div class="skill-container">
+      <p class="skill-name">SCSS</p>
+      <i class="skill-icon fa-brands fa-sass"></i>
+      <div class="xp-level sass-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+    <div class="skill-container">
+      <p class="skill-name">BOOTSTRAP</p>
+      <i class="skill-icon fa-brands fa-bootstrap"></i>
+      <div class="xp-level bootstrap-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+    <div class="skill-container">
+      <p class="skill-name">JAVASCRIPT</p>
+      <i class="skill-icon fa-brands fa-js"></i>
+      <div class="xp-level js-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+    <div class="skill-container">
+      <p class="skill-name">REACT</p>
+      <i class="skill-icon fa-brands fa-react"></i>
+      <div class="xp-level react-knowlege"></div>
+      <div class="reference-bar"></div>
+    </div>
+
+  </div>
+
+  <div class="design-container">
+    <div class="skills-container design">
+
+      <div class="skill-container">
+        <p class="design-skill-name">Photoshop</p>
+        <div class="xp-level photoshop-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+      <div class="skill-container">
+        <p class="design-skill-name">Illustrator</p>
+        <div class="xp-level illustrator-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+      <div class="skill-container">
+        <p class="design-skill-name">Indesign</p>
+        <div class="xp-level indesign-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+      <div class="skill-container">
+        <p class="design-skill-name">Premiere Pro</p>
+        <div class="xp-level premierepro-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+      <div class="skill-container">
+        <p class="design-skill-name">After Effects</p>
+        <div class="xp-level aftereffects-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+      <div class="skill-container">
+        <p class="design-skill-name">3ds Max</p>
+        <div class="xp-level dsmax-knowlege"></div>
+        <div class="reference-bar"></div>
+      </div>
+
+    </div>
+
+    <a href="https://www.behance.net/szabogaborHUN" target=”_blank” class="behance-link">
+      <i class="fa-brands fa-square-behance"></i>
+      <p class="behance-text">Behance</p>
+    </a>
   </div>
 
   <!-- Contact -->
