--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
     <h2 class="title-front">Contact</h2>
   </div>
 
+  <div class="footer-container">
+    <form action="" class="contact-form-group">
+      <div class="sender-data-container">
+        <input type="text" class="sender-data" required placeholder="Name">
+        <input type="email" class="sender-data" required placeholder="Email address">
+      </div>
+      <textarea name="message" id="message" cols="30" rows="6" required placeholder="Write your message"></textarea>
+      <button id="btn-send-message">Send message</button>
+    </form>
+  </div>
+
   <!-- Footer -->
   <div class="demo"></div>
 </body>
