Improve the hover effects

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <body>
   <!-- Navigation -->
+
   <header class="header">
     <nav class="navbar__container">
       <a href="#home" class="logo">
@@ -55,8 +56,10 @@
     </nav>
   </header>
 
+
+
   <!-- Main -->
-  <div class="main-container">
+  <section class="main-container">
     <div class="image-container"></div>
     <div class="name-container">
       <h1 class="name">GABOR SZABO</h1>
@@ -64,28 +67,32 @@
     <div class="forward-icon-container">
       <a href="#portfolio"><i class="fa-solid fa-sort-down"></i></a>
     </div>
+  </section>
 
-  </div>
+
 
   <!-- Portfolio -->
-  <div class="title-container">
+  <section class="title-container">
     <p class="title-back">Portfolio</p>
     <h2 class="title-front">Portfolio</h2>
-  </div>
+  </section>
 
 
 
   <!-- About -->
+
   <div class="title-container">
     <h2 class="title-back">About</h2>
     <h2 class="title-front">About</h2>
   </div>
 
   <div class="personal-container">
+
     <div class="profile-image">
       <p class="image-name">Gabor</p>
       <p class="image-name">Szabo</p>
     </div>
+
     <p class="introduction-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
       incididunt ut labore et dolore magna aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin. Lorem
       ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -94,42 +101,42 @@
 
   <div class="skills-container">
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">HTML</p>
       <i class="skill-icon fa-brands fa-html5"></i>
       <div class="xp-level html-knowlege"></div>
       <div class="reference-bar"></div>
     </div>
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">CSS</p>
       <i class="skill-icon fa-brands fa-css3-alt"></i>
       <div class="xp-level css-knowlege"></div>
       <div class="reference-bar"></div>
     </div>
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">SCSS</p>
       <i class="skill-icon fa-brands fa-sass"></i>
       <div class="xp-level sass-knowlege"></div>
       <div class="reference-bar"></div>
     </div>
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">BOOTSTRAP</p>
       <i class="skill-icon fa-brands fa-bootstrap"></i>
       <div class="xp-level bootstrap-knowlege"></div>
       <div class="reference-bar"></div>
     </div>
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">JAVASCRIPT</p>
       <i class="skill-icon fa-brands fa-js"></i>
       <div class="xp-level js-knowlege"></div>
       <div class="reference-bar"></div>
     </div>
 
-    <div class="skill-container">
+    <div class="skill-container web">
       <p class="skill-name">REACT</p>
       <i class="skill-icon fa-brands fa-react"></i>
       <div class="xp-level react-knowlege"></div>
@@ -139,39 +146,39 @@
   </div>
 
   <div class="design-container">
-    <div class="skills-container design">
+    <div class="skills-container designs">
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">Photoshop</p>
         <div class="xp-level photoshop-knowlege"></div>
         <div class="reference-bar"></div>
       </div>
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">Illustrator</p>
         <div class="xp-level illustrator-knowlege"></div>
         <div class="reference-bar"></div>
       </div>
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">Indesign</p>
         <div class="xp-level indesign-knowlege"></div>
         <div class="reference-bar"></div>
       </div>
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">Premiere Pro</p>
         <div class="xp-level premierepro-knowlege"></div>
         <div class="reference-bar"></div>
       </div>
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">After Effects</p>
         <div class="xp-level aftereffects-knowlege"></div>
         <div class="reference-bar"></div>
       </div>
 
-      <div class="skill-container">
+      <div class="skill-container design">
         <p class="design-skill-name">3ds Max</p>
         <div class="xp-level dsmax-knowlege"></div>
         <div class="reference-bar"></div>
