Skills animations updated

--- a/index.html
+++ b/index.html
@@ -246,7 +246,10 @@
                 </div>
                 <textarea name="message" id="message" cols="30" rows="6" required
                     placeholder="Write your message"></textarea>
-                <button id="btn-send-message"><i class="fa-regular fa-envelope"></i>Send message</button>
+                <button id="btn-send-message">
+                    <i class="fa-regular fa-envelope"></i>
+                    <p class="btn-send-text">Send message</p>
+                </button>
             </form>
 
         </div>
