--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
+    <script src="/data/web-skills.js"></script>
+    <script src="/data/design-skills.js"></script>
     <script src="/js/app.js" defer></script>
 
     <title>SG Portfolio</title>
@@ -138,92 +140,11 @@
             aliqua. Mattis pellentesque id nibh tortor id aliquet lectus proin.</p>
     </div>
 
-    <div class="skills-container">
 
-        <div class="skill-container web">
-            <p class="skill-name">HTML</p>
-            <i class="skill-icon fa-brands fa-html5"></i>
-            <div class="xp-level html-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-        <div class="skill-container web">
-            <p class="skill-name">CSS</p>
-            <i class="skill-icon fa-brands fa-css3-alt"></i>
-            <div class="xp-level css-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-        <div class="skill-container web">
-            <p class="skill-name">SCSS</p>
-            <i class="skill-icon fa-brands fa-sass"></i>
-            <div class="xp-level sass-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-        <div class="skill-container web">
-            <p class="skill-name">BOOTSTRAP</p>
-            <i class="skill-icon fa-brands fa-bootstrap"></i>
-            <div class="xp-level bootstrap-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-        <div class="skill-container web">
-            <p class="skill-name">JAVASCRIPT</p>
-            <i class="skill-icon fa-brands fa-js"></i>
-            <div class="xp-level js-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-        <div class="skill-container web">
-            <p class="skill-name">REACT</p>
-            <i class="skill-icon fa-brands fa-react"></i>
-            <div class="xp-level react-knowlege"></div>
-            <div class="reference-bar"></div>
-        </div>
-
-    </div>
+    <div id="web-knowledge" class="skills-container"></div>
 
     <div class="design-container">
-        <div class="skills-container designs">
-
-            <div class="skill-container design">
-                <p class="design-skill-name">Photoshop</p>
-                <div class="xp-level photoshop-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-            <div class="skill-container design">
-                <p class="design-skill-name">Illustrator</p>
-                <div class="xp-level illustrator-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-            <div class="skill-container design">
-                <p class="design-skill-name">Indesign</p>
-                <div class="xp-level indesign-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-            <div class="skill-container design">
-                <p class="design-skill-name">Premiere Pro</p>
-                <div class="xp-level premierepro-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-            <div class="skill-container design">
-                <p class="design-skill-name">After Effects</p>
-                <div class="xp-level aftereffects-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-            <div class="skill-container design">
-                <p class="design-skill-name">3ds Max</p>
-                <div class="xp-level dsmax-knowlege"></div>
-                <div class="reference-bar"></div>
-            </div>
-
-        </div>
+        <div id="design-knowledge" class="skills-container designs"></div>
 
         <a href="https://www.behance.net/szabogaborHUN" target=”_blank” class="behance-link">
             <i class="btn-behance fa-brands fa-square-behance"></i>
