Minor changes in the design and portfolio section

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
     <link rel="stylesheet" href="assets/css/style.css" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-
 
     <script src="https://kit.fontawesome.com/0f88116e95.js" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+    <script src="/data/portfolio.js"></script>
     <script src="/data/web-skills.js"></script>
     <script src="/data/design-skills.js"></script>
     <script src="/js/app.js" defer></script>
@@ -85,35 +86,65 @@
 
     <section class="portfolio-container">
         <div class="swiper my-swiper">
-            <div class="swiper-wrapper">
+            <div class="swiper-wrapper" id="swiper-wrapper">
+
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/500x500" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/501x501" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/502x502" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/503x503" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/504x504" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/505x505" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/506x506" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/507x507" alt="">
                 </div>
                 <div class="swiper-slide">
+                    <div class="swiper-overlay">
+                        <button class="btn-show-more">Show more</button>
+                    </div>
                     <img src="https://source.unsplash.com/508x508" alt="">
                 </div>
+
             </div>
+
             <div class="swiper-pagination"></div>
         </div>
     </section>
